--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 /backend/node_modules/
 /node_modules/
-/frontend/node_modules/
 .DS_Store
-/backend/exercises.json/
-/backend/schedules.json/
+/backend/exercises.json
+/backend/schedules.json
